--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "primevue": "^3.7.2",
     "vue": "^3.0.0",
     "vue-axios": "^3.3.7",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
